k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mosip-ingress
  namespace: mosip
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /idauthentication
        pathType: Prefix
        backend:
          service:
            name: id-authentication-service
            port:
              number: 80
      - path: /registration
        pathType: Prefix
        backend:
          service:
            name: registration-service
            port:
              number: 80
